--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,9 @@
     "name": "Getting Started Example",
     "version": "1.0",
     "description": "Build an Extension!",
-    "permissions": ["storage"],
+    "permissions": ["declarativeContent", "storage", "tabs",
+    "activeTab",
+    "<all_urls>"],
     "background": {
       "scripts": ["background.js"],
       "persistent": false
