--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,33 @@
     "version": "1.0",
     "description": "Build an Extension!",
     "permissions": ["declarativeContent", "storage", "tabs",
-    "activeTab",
+    "activeTab", "downloads",
     "<all_urls>"],
     "background": {
       "scripts": ["background.js"],
       "persistent": false
     },
-    "page_action": {
-      "default_popup": "popup.html"
-    },
+    "content_scripts": [
+        {
+            "matches": [
+                "<all_urls>"
+            ],
+            "js": ["content.js"]
+        }
+    ],
+    "browser_action": {
+    "default_icon": {
+      "16": "images/get_started16.png",
+      "32": "images/get_started32.png",
+      "48": "images/get_started48.png",
+      "128": "images/get_started128.png"
+    }
+  },
+  "icons": {
+    "16": "images/get_started16.png",
+    "32": "images/get_started32.png",
+    "48": "images/get_started48.png",
+    "128": "images/get_started128.png"
+  },
     "manifest_version": 2
   }
