--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Getting Started Example",
     "version": "1.0",
-    "description": "Build an Extension!",
+    "description": "Trancsriber",
     "permissions": ["declarativeContent", "storage", "tabs",
     "activeTab", "downloads",
     "<all_urls>"],
@@ -18,7 +18,7 @@
         }
     ],
     "browser_action": {
-      "default_popup": "popup.html",
+  
     "default_icon": {
       "16": "images/get_started16.png",
       "32": "images/get_started32.png",
