--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "result.js",
   "dependencies": {
     "aws-sdk": "^2.678.0",
-    "docx": "^5.0.2",
-    "fs": "0.0.1-security"
+    "docx": "^5.0.2"
   },
   "devDependencies": {},
   "scripts": {
